--- a/platformio.ini
+++ b/platformio.ini
@@ -14,7 +14,7 @@ board = m5stack-stamps3
 framework = arduino
 build_flags =
  -DARDUINO_USB_CDC_ON_BOOT=1
- -DUSE_NIMBLE
+;  -DCORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_VERBOSE
 lib_deps =
 	m5stack/M5Unified@^0.2.5
 	https://github.com/ji6czd/M5Cardputer
